# DirectScreenAPI

./: .codex_tmp_dsapi_cycles.sh  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GPU_WINDOW_REFACTOR.md  LICENSE  README.md  REFACTOR_PLAN.md  REFACTOR_REPORT.md  SECURITY.md
.github/workflows/: ci.yml
android/: README.md
android/adapter/native/: dsapi_hwbuffer_bridge.c  dsapi_hwbuffer_bridge.h
android/ksu_manager/src/main/: AndroidManifest.xml
bridge/c/: CMakeLists.txt
bridge/c/examples/: simple_route.c
bridge/c/include/: directscreen_api.h
cmd/: README.md
cmd/framepull/: Cargo.toml
cmd/framepull/src/: main.rs
core/rust/: Cargo.toml
core/rust/src/: lib.rs
core/rust/src/api/: mod.rs  types.rs
core/rust/src/backend/: filter.rs  mod.rs  vulkan.rs
core/rust/src/client/: core.rs  display.rs  error.rs  mod.rs  render.rs  touch.rs  touch_router.rs
core/rust/src/client/touch_router/: device.rs  event.rs  io.rs  map.rs  passthrough.rs  routing.rs
core/rust/src/domain/: mod.rs  state.rs
core/rust/src/engine/: mod.rs  module_registry.rs  module_runtime.rs  protocol.rs  runtime.rs
core/rust/src/ffi/: mod.rs
core/rust/src/util/: ctl_wire.rs  mod.rs
docs/: README.md
docs/api/: c_abi.md  screen_stream.md
docs/architecture/: _file_inventory.txt  android_event_driven_refactor.md  daemon_model.md  dsapi_aidl_no_socket_rebuild.md  dsapi_lsp_rebuild_master_plan.md  dsapi_module_runtime_v2_spec.md  dsapi_repo_optimization_journal.md  dsapi_v3_modular_service_refactor.md  dsapi_zygisk_loader_notes.md  dsapi_zygote_parasitic_manager_plan.md  ksu_kernel_core_plan.md  lsp_lsposed_implementation_analysis.md  manager_module_rebuild_plan.md  overview.md  runtime_model.md
docs/demo/: GPU_DEMO_FILES.md
docs/governance/: release.md  repair_checklist.md  roadmap.md
docs/guides/: android_adapter.md  build.md  commands.md  daemon_ops.md  ksu_capability_module_spec.md  stability_policy.md  touch_bridge.md  touch_routing.md
ksu/: README.md
ksu/capability_examples/: inject.ime.sh  inject.window.sh
ksu/module_examples/dsapi.demo.gpu_window/: dsapi.module  env.spec
ksu/module_examples/dsapi.demo.gpu_window/actions/: set_color.sh  set_pos.sh  set_speed.sh  set_view.sh  start.sh  status.sh  stop.sh
ksu/module_examples/dsapi.demo.gpu_window/capabilities/: dsapi.demo.gpu_window.sh
ksu/module_examples/dsapi.demo.hello_consumer/: dsapi.module  env.spec
ksu/module_examples/dsapi.demo.hello_consumer/actions/: run.sh
ksu/module_examples/dsapi.demo.hello_consumer/capabilities/: dsapi.demo.hello_consumer.sh
ksu/module_examples/dsapi.demo.hello_provider/: dsapi.module  env.spec
ksu/module_examples/dsapi.demo.hello_provider/actions/: start.sh  status.sh  stop.sh
ksu/module_examples/dsapi.demo.hello_provider/capabilities/: dsapi.demo.hello_provider.sh
ksu/module_examples/dsapi.demo.touch_ui/: dsapi.module  env.spec
ksu/module_examples/dsapi.demo.touch_ui/actions/: quick_start.sh  start.sh  status.sh  stop.sh
ksu/module_examples/system.ime/: dsapi.module  env.spec
ksu/module_examples/test.touch_demo/: dsapi.module  env.spec
ksu/module_template/: action.sh  module.prop.in  post-fs-data.sh  service.sh  uninstall.sh
ksu/module_template/capabilities/: core.daemon.sh  core.display_watch.sh
ksu/zygisk_loader/: dsapi_zygisk_loader.cpp  zygisk.hpp
scripts/: android_display_probe.sh  build_android_adapter.sh  build_android_manager.sh  build_android_manager_chroot.sh  build_c_example.sh  build_core.sh  build_framepull.sh  build_ksu_module.sh  build_ksu_module_zip.sh  build_zygisk_loader.sh  check.sh  daemon_cmd.sh  daemon_frame_pull.sh  daemon_presenter_run.sh  daemon_presenter_start.sh  daemon_presenter_status.sh  daemon_presenter_stop.sh  daemon_start.sh  daemon_status.sh  daemon_stop.sh  daemon_sync_display.sh  daemon_touch_bridge_run.sh  daemon_touch_bridge_start.sh  daemon_touch_bridge_status.sh  daemon_touch_bridge_stop.sh  demo_aidl_smoke.sh  dsapi.sh  dsapi_android.sh  dsapi_daemon.sh  dsapi_frame.sh  dsapi_ksu_preflight.sh  dsapi_presenter.sh  dsapi_screen.sh  dsapi_touch.sh  dsapi_touch_demo_test.sh  ensure_d8_from_r8.sh  fetch_android_jar.sh  fix.sh  touch_event_to_dsapi.awk
(+59 files in other folders)
