[package]
name = "directscreen-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Foundation runtime core for DirectScreenAPI"

[lib]
name = "directscreen_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "dsapi"
path = "src/bin/dsapi.rs"

[[bin]]
name = "dsapid"
path = "src/bin/dsapid.rs"

[[bin]]
name = "dsapictl"
path = "src/bin/dsapictl.rs"

[[bin]]
name = "dsapistream"
path = "src/bin/dsapistream.rs"

[[bin]]
name = "dsapiinput"
path = "src/bin/dsapiinput.rs"

[dependencies]
base64 = "0.22"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
