[package]
name = "directscreen-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Foundation runtime core for DirectScreenAPI"

[lib]
name = "directscreen_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "dsapi"
path = "src/bin/dsapi.rs"

[[bin]]
name = "dsapid"
path = "src/bin/dsapid.rs"

[[bin]]
name = "dsapictl"
path = "src/bin/dsapictl.rs"

[[bin]]
name = "dsapistream"
path = "src/bin/dsapistream.rs"

[[bin]]
name = "dsapiinput"
path = "src/bin/dsapiinput.rs"

[[bin]]
name = "test_touch_ui"
path = "src/bin/test_touch_ui.rs"

[dependencies]
evdev = "0.12"
font8x8 = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
tiny-skia = "0.11"
