[package]
name = "directscreen-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Foundation runtime core for DirectScreenAPI"

[lib]
name = "directscreen_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "dsapi"
path = "src/bin/dsapi.rs"

[[bin]]
name = "dsapid"
path = "src/bin/dsapid.rs"

[[bin]]
name = "dsapictl"
path = "src/bin/dsapictl.rs"

[[bin]]
name = "dsapistream"
path = "src/bin/dsapistream.rs"

[[bin]]
name = "dsapiinput"
path = "src/bin/dsapiinput.rs"

[[bin]]
name = "dsapi_touch_demo"
path = "src/bin/dsapi_touch_demo.rs"

[dependencies]
evdev = "0.12"
font8x8 = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
mio = { version = "0.8", features = ["os-ext", "os-poll"] }
tiny-skia = "0.11"
